[gd_scene load_steps=5 format=3 uid="uid://dy77ivss7rbpn"]

[ext_resource type="Script" uid="uid://bhtqcsmermlhe" path="res://src/events/event_page.gd" id="1_t3tus"]
[ext_resource type="FontFile" uid="uid://baqvpre2xhvpx" path="res://fonts/PublicPixel.ttf" id="2_p4m0u"]
[ext_resource type="AudioStream" uid="uid://pttbkt2ctwrf" path="res://audio/good-event.wav" id="3_p4m0u"]
[ext_resource type="AudioStream" uid="uid://cf3omvpgypegi" path="res://audio/bad-event.wav" id="4_6s0xq"]

[node name="EventPage" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_t3tus")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 784.0
offset_bottom = 1168.0
color = Color(0.9607843, 0.85882354, 0.8745098, 1)

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 240.0
offset_top = 400.0
offset_right = 490.0
offset_bottom = 650.0
expand_mode = 1

[node name="LabelEvent" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 95.0
offset_right = 30.0
offset_bottom = 134.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_p4m0u")
theme_override_font_sizes/font_size = 20

[node name="GoodSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_p4m0u")

[node name="BadSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_6s0xq")
